--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test:smoke-build:posix:
   image: debian:12-slim
   needs: []
   before_script:
-    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev
+    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev libcjson-dev
   script:
     - cmake -C cmake/CMake_posix_defaults.txt -B build tests/smoke
     - cmake --build build --parallel $(nproc --all)
@@ -43,7 +43,7 @@ test:smoke-build:weak:
   image: debian:12-slim
   needs: []
   before_script:
-    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev
+    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev libcjson-dev
   script:
     - cmake -C cmake/CMake_weak_defaults.txt -B build tests/smoke
     - cmake --build build --parallel $(nproc --all)
@@ -53,7 +53,7 @@ test:unit:
   stage: test
   image: debian:12
   before_script:
-    - apt update && apt install -yyq g++ cmake git make lcov pkg-config curl
+    - apt update && apt install -yyq g++ cmake git make lcov pkg-config curl libcjson-dev
   script:
     - cmake -D COVERAGE=ON tests/unit/
     - make --jobs=$(nproc --all) --keep-going coverage
@@ -70,7 +70,7 @@ test:unit:
   stage: test
   image: ubuntu:24.04
   before_script:
-    - apt update && apt install -yyq clang ccache cmake git make pkg-config curl
+    - apt update && apt install -yyq clang ccache cmake git make pkg-config curl libcjson-dev
     # mender-artifact install
     # Commented out for now, but likely needed when adding tests later on
     # - apt-get install --assume-yes
