build: Include default cache for POSIX target
This inclusion simplifies user calls to `cmake`. And, in any case, if a
cache value is already present, it won't be overriden so user
preferences are respected.

The unit tests in CI were being linked with the "weak" implementations,
that is why the missing dependencies there went missing. And, once
touching the GitLab CI file, let's tidy it up a bit ;)

Ticket: MEN-7526

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,9 @@ test:smoke-build:posix:
   image: debian:12-slim
   needs: []
   before_script:
-    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev libcjson-dev
+    - apt-get update && apt-get install -yqq
+      cmake git make pkg-config python3
+      libcurl4-openssl-dev libcjson-dev
   script:
     - cmake -C cmake/CMake_posix_defaults.txt -B build tests/smoke
     - cmake --build build --parallel $(nproc --all)
@@ -43,7 +45,9 @@ test:smoke-build:weak:
   image: debian:12-slim
   needs: []
   before_script:
-    - apt-get update && apt-get install -y git cmake libcurl4-openssl-dev libcjson-dev
+    - apt-get update && apt-get install -yqq
+      cmake git make pkg-config python3
+      libcjson-dev
   script:
     - cmake -C cmake/CMake_weak_defaults.txt -B build tests/smoke
     - cmake --build build --parallel $(nproc --all)
@@ -51,9 +55,13 @@ test:smoke-build:weak:
 
 test:unit:
   stage: test
-  image: debian:12
+  image: debian:12-slim
   before_script:
-    - apt update && apt install -yyq g++ cmake git make lcov pkg-config curl libcjson-dev
+    - apt update && apt install -yyq
+      cmake git make pkg-config python3
+      libcurl4-openssl-dev libcjson-dev
+      g++
+      lcov
   script:
     - cmake -D COVERAGE=ON tests/unit/
     - make --jobs=$(nproc --all) --keep-going coverage
@@ -70,7 +78,10 @@ test:unit:
   stage: test
   image: ubuntu:24.04
   before_script:
-    - apt update && apt install -yyq clang ccache cmake git make pkg-config curl libcjson-dev
+    - apt update && apt install -yyq
+      cmake git make pkg-config python3
+      libcurl4-openssl-dev libcjson-dev
+      clang
     # mender-artifact install
     # Commented out for now, but likely needed when adding tests later on
     # - apt-get install --assume-yes
